#   PROCESS THAT IS TIME SENSITIVE, UNMONITORED, OR
#   PERSISTENCE CRITICAL. DO NOT USE THIS SOFTWARE WITHOUT
#   ANOTHER METHOD iOR RUNNING THE PROCESS YOU WISH TO
#   AUTOMATE WITH Net::FullAuto. DO NOT USE IN/FOR A PROCESS
#   WHERE FAILURE OF "ANY KIND" IS UNACCEPTABLE.
#
################################################################


2011-07-04  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9936 released.

        * Made more adjustments to Cygwin based installation
          code in Makefile.PL for Windows EXE installation.


2011-06-23  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9935 released.

        * Made more adjustments to Cygwin based installation
          code in Makefile.PL for Windows EXE installation.


2011-06-22  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9934 released.

        * Made more adjustments to Cygwin based installation
          code in Makefile.PL for Windows EXE installation.


2011-06-20  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9933 released.

        * Made more adjustments to Cygwin based installation
          code in Makefile.PL for Windows EXE installation.


2011-06-17  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9932 released.

        * Made more adjustments to Cygwin based installation
          code in Makefile.PL for Windows EXE installation.


2011-06-15  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9931 released.

        * Made more adjustments to Cygwin based installation
          code in Makefile.PL for Windows EXE installation.


2011-06-14  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9930 released.

        * Made more adjustments to Cygwin based installation
          code in Makefile.PL for Windows EXE installation.


2011-06-12  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
