@@ -54,7 +54,7 @@ package Net::FullAuto;
 ################################################################
 
 
-our $VERSION='0.9936';
+our $VERSION='0.9937';
 
 
 use 5.005;
